ecsdb/src/query/snapshots/ecsdb__query__ir__test__filter_expression_sql_query@And([Or([WithComponent("ecsdb::A"), WithComponent("ecsdb::B")]), WithoutComponent("ecsdb::C")]).sql_query().snap
---
source: ecsdb/src/query/ir.rs
description: "And([Or([WithComponent(\"ecsdb::A\"), WithComponent(\"ecsdb::B\")]), WithoutComponent(\"ecsdb::C\")]).sql_query()"
---
SqlFragment<ecsdb::query::ir::Select> {
    sql: "select distinct entity from components where (component in (:1, :2) and (select true from components c2 where c2.entity = components.entity and c2.component = :3) is null)",
    placeholders: [
        (
            ":1",
            Text(
                "ecsdb::A",
            ),
        ),
        (
            ":2",
            Text(
                "ecsdb::B",
            ),
        ),
        (
            ":3",
            Text(
                "ecsdb::C",
            ),
        ),
    ],
}
