ecsdb/src/query/snapshots/ecsdb__query__ir__test__filter_expression_sql_query@And([WithComponent("ecsdb::A"), Or([WithComponent("ecsdb::B"), WithComponent("ecsdb::C")])]).simplify().sql_query().snap
---
source: ecsdb/src/query/ir.rs
description: "And([WithComponent(\"ecsdb::A\"), Or([WithComponent(\"ecsdb::B\"), WithComponent(\"ecsdb::C\")])]).simplify().sql_query()"
---
SqlFragment<ecsdb::query::ir::Select> {
    sql: "select entity from components where (component = :1 and ((select true from components c2 where c2.entity = components.entity and c2.component = :2) or (select true from components c2 where c2.entity = components.entity and c2.component = :3)))",
    placeholders: [
        (
            ":1",
            Text(
                "ecsdb::A",
            ),
        ),
        (
            ":2",
            Text(
                "ecsdb::B",
            ),
        ),
        (
            ":3",
            Text(
                "ecsdb::C",
            ),
        ),
    ],
}
