ecsdb/src/query/snapshots/ecsdb__query__ir__test__filter_expression_sql_query@And([WithComponent("ecsdb::Foo"), WithoutComponent("ecsdb::Bar")]).sql_query().snap
---
source: ecsdb/src/query/ir.rs
description: "And([WithComponent(\"ecsdb::Foo\"), WithoutComponent(\"ecsdb::Bar\")]).sql_query()"
---
SqlFragment<ecsdb::query::ir::Select> {
    sql: "select entity from components where (component = :1 and (select true from components c2 where c2.entity = components.entity and c2.component = :2) is null)",
    placeholders: [
        (
            ":1",
            Text(
                "ecsdb::Foo",
            ),
        ),
        (
            ":2",
            Text(
                "ecsdb::Bar",
            ),
        ),
    ],
}
